# clias

./: .copier-answers.yml  README.md  pyproject.toml
clias/: cli.py
clier/: __main__.py  cli.py  run.py
tests/: test_clias.py  test_clier.py
