[project]
name = "clier"
version = "0.1"
description = "turn shell script to cli"
readme = "README.md"
authors = [{name = "kj-9"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "jinja2>=3.1.4",
]

[project.urls]
Homepage = "https://github.com/kj-9/clier"
Changelog = "https://github.com/kj-9/clier/releases"
Issues = "https://github.com/kj-9/clier/issues"
CI = "https://github.com/kj-9/clier/actions"

[project.scripts]
clier = "clier.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "cogapp"]

# see also: https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
select = [
    "E", "F", "I",
    #"D", for now
    "W", "PL", "B", "UP"
]

# Never enforce `E501` (line length violations).
ignore = [
    "E501",
    "PLR2004"# for now
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"*__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
